# spinach

./: Cargo.toml  README.md  crates.js  index.html  repr_notes.md  search-index.js  settings.html  source-files.js  wl.txt  workload.bash  workload.txt
base64/: constant.BCRYPT.html  constant.BINHEX.html  constant.CRYPT.html  constant.IMAP_MUTF7.html  constant.STANDARD.html  constant.STANDARD_NO_PAD.html  constant.URL_SAFE.html  constant.URL_SAFE_NO_PAD.html  enum.CharacterSet.html  fn.decode.html  (+10 more)
lib/: Cargo.toml
lib/src/: collections.rs  func.rs  hide.rs  lib.rs  tcp_pool.rs  tcp_server.rs  util.rs
lib/src/comp/: debugcomp.rs  dynsplitcomp.rs  mod.rs  nng_comp.rs  tcpcomp.rs  tcppoolcomp.rs  tcpservercomp.rs
lib/src/func/: binary.rs  unary.rs
lib/src/func/binary/: cartesian_product.rs  lookup.rs  pair.rs  partitioned.rs
lib/src/func/unary/: serde.rs
lib/src/lattice/: bottom.rs  bytes.rs  dom_pair.rs  dompair.rs  map_union.rs  mapunion.rs  mod.rs  ord.rs  pair.rs  serial.rs  set_union.rs  setunion.rs
lib/src/op/: batchconvertop.rs  binaryop.rs  channelop.rs  constop.rs  debottomop.rs  debugop.rs  dynop.rs  iterop.rs  latticeop.rs  mergeop.rs  mod.rs  morphop.rs  nng_op.rs  nullop.rs  onceop.rs  opext.rs  optrait.rs  readop.rs  serdeop.rs  splitop.rs  stdinop.rs  switchop.rs  symhashjoinop.rs  tcpop.rs  tcppoolop.rs  tcpserverop.rs  topop.rs  zipop.rs
lib/tests/: test_chat.rs.old  test_join.rs.old  test_net.rs.old  test_oneoffreads.rs  test_shj.rs  test_shj_constructive.rs  test_shj_monolith.rs  test_split.rs  test_switch.rs  test_tcp.rs  tests.rs.old
(+19425 files in other folders)
