[package]
name = "spinach"
version = "0.1.0"
authors = ["Mingwei Samuel <mingwei.samuel@gmail.com>"]
edition = "2018"
include = [ "src/**", "/README.md" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3"
futures = "0.3"
tokio = { version = "0.3", features = [ "rt", "sync", "stream", "macros", "time" ] }
