[package]
name = "spinach"
version = "0.1.0"
authors = ["Mingwei Samuel <mingwei.samuel@gmail.com>"]
edition = "2018"
include = [ "src/**", "/README.md" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "messaging" ]
messaging = [ "nng" ]

[dependencies]
futures-core = "0.3"
futures = "0.3"
nng = { version = "1.0", optional = true }
ref-cast = "1.0"
serde = "1.0"
serde_json = "1.0"
static_assertions = "1.1.0"
tokio = { version = "1", features = [ "io-std", "io-util", "macros", "net", "rt", "sync", "time" ] }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = [ "codec" ] }
